--- a/xplorati/vite-project/package.json
+++ b/xplorati/vite-project/package.json
@@ -10,10 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "lucide-react": "^0.469.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.2",
+    "react-slick": "^0.30.3",
     "react-tsparticles": "^2.12.2",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.13",
     "tsparticles": "^3.7.1"
   },
